Reorganize IDEA vmoptions