@@ -1,18 +1,19 @@
--ea
+-da
 -Xverify:none
 -Xms512m
 -Xmx4096m
 -Xbootclasspath/a:../lib/boot.jar
--XX:MetaspaceSize=192m
--XX:MaxMetaspaceSize=768m
+-XX:MetaspaceSize=128m
+-XX:MaxMetaspaceSize=512m
 -XX:InitialCodeCacheSize=128m
 -XX:ReservedCodeCacheSize=384m
+-XX:-UseConcMarkSweepGC
 -XX:+UseG1GC
 -XX:MaxGCPauseMillis=180
--XX:InitiatingHeapOccupancyPercent=36
+-XX:InitiatingHeapOccupancyPercent=40
 -XX:SoftRefLRUPolicyMSPerMB=50
--XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
--XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+-XX:ErrorFile=$USER_HOME/java_error_in_studio_%p.log
+-XX:HeapDumpPath=$USER_HOME/java_error_in_studio.hprof
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:-OmitStackTraceInFastThrow
 -XX:+ScavengeBeforeFullGC
@@ -24,4 +25,5 @@
 -Dsun.io.useCanonPrefixCache=false
 -Dsun.net.inetaddr.ttl=60
 -Dsun.net.inetaddr.negative.ttl=5
--Dide.no.platform.update=true
+-Djna.nosys=true
+-Djna.boot.library.path=
